# build/swagger.json
@@ -275,6 +275,18 @@
 					"modifier": {
 						"type": "number",
 						"format": "double"
+					},
+					"coins": {
+						"type": "number",
+						"format": "double"
+					},
+					"Diamonds": {
+						"type": "number",
+						"format": "double"
+					},
+					"Crystal": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
@@ -283,7 +295,10 @@
 					"description",
 					"race",
 					"booster",
-					"modifier"
+					"modifier",
+					"coins",
+					"Diamonds",
+					"Crystal"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -2564,8 +2579,16 @@
 			"post": {
 				"operationId": "PlayerMinusMoney",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "number",
+									"format": "double"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
